# cgmath

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: CompilerSetup.cmake  Packages.cmake
include/: .clang-format  constants.hpp  matrix2x2.hpp  matrix3x3.hpp  matrix4x4.hpp  vector.hpp  vector2.hpp  vector3.hpp  vector4.hpp
include/internal/: matrix.hpp  matrix2x2.hpp  matrix3x3.hpp  matrix4x4.hpp  simd.hpp  vector.hpp
src/: matrix2x2.cpp  matrix3x3.cpp  matrix4x4.cpp  vector2.cpp  vector3.cpp  vector4.cpp
tests/: matrix_test.cpp  vector_test.cpp
